# ESTALAKH

./: .gitignore  pyproject.toml
scripts/: robustness_demo.py
src/: grid_extraction.py  overlay.py  solver.py
src/api/: app.py
src/orientation/: dataset.py  infer.py  model.py  train.py
src/recognition/: dataset.py  infer.py  model.py  train.py
