[project]
name = "estalakh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "matplotlib>=3.11.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "uvicorn>=0.49.0",
    "numpy>=1.24",
    "kaggle>=1.6",
    "pillow>=12.2.0",
]
